<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>github.chatapp.client</groupId>
	<artifactId>chatapp.client</artifactId>
	<name>ChatAppClient</name>
	<version>1.0</version>
	<packaging>jar</packaging>

	<properties>
		<mainClass>main.java.application.ClientLauncher</mainClass>
	</properties>

	<licenses>
		<license>
			<name>GNU Affero General Public Licence, Version 3.0</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
		</license>
	</licenses>
	<inceptionYear>2023</inceptionYear>
	
	<dependencies>

		<dependency>
			<groupId>github.chatapp.common</groupId>
			<artifactId>chatapp.common</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-buffer</artifactId>
			<version>4.1.82.Final</version>
		</dependency>

		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.10</version>
		</dependency>

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.40.0.0</version>
		</dependency>

		<dependency>
			<groupId>me.gosimple</groupId>
			<artifactId>nbvcxz</artifactId>
			<version>1.5.0</version>
		</dependency>

		<dependency>
			<groupId>io.github.palexdev</groupId>
			<artifactId>materialfx</artifactId>
			<version>11.13.5</version>
		</dependency>

		<dependency>
			<groupId>org.jfxtras</groupId>
			<artifactId>jmetro</artifactId>
			<version>11.6.15</version>
		</dependency>

		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.1</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>19</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>19</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>14 <!--Can only work from version 14 and below--></version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.4.0</version>
		</dependency>
		
	</dependencies>

	<build>

		<sourceDirectory>src</sourceDirectory>
		<finalName>ChatAppClient</finalName>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<targetPath>${project.build.directory}/classes/main/resources/</targetPath>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- Build an executable JAR -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>--add-opens</argument>
						<argument>java.base/java.lang=ALL-UNNAMED</argument>
						<argument>-client</argument>
						<argument>-XX:+UseZGC</argument>
						<argument>-XX:+ShrinkHeapInSteps</argument>
						<argument>-XX:MinHeapFreeRatio=2</argument>
						<argument>-XX:MaxHeapFreeRatio=5</argument>
						<argument>-Dfile.encoding=UTF-8</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>${mainClass}</argument>
					</arguments>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
